# website/src/lib/api/region.ts
@@ -1,0 +1,13 @@
+import type { Region } from '../../types';
+import { apiRequest } from './utils';
+
+export type RegionListResponse = {
+	message: string;
+	data: Region[];
+};
+
+export function getRegions(): Promise<RegionListResponse> {
+	return apiRequest<RegionListResponse>('/regions', {
+		defaultError: 'Failed to fetch regions'
+	});
+}
