# website/src/routes/[teamID]/monitors/new/+page.ts
@@ -1,16 +1,22 @@
 import { getNotifications } from '$lib/api/notification';
+import { getRegions } from '$lib/api/region';
 import type { PageLoad } from './$types';
-import type { Notification } from '../../../../types';
+import type { Notification, Region } from '../../../../types';
 
 export type NewMonitorPageData = {
 	notifications: Notification[];
+	regions: Region[];
 };
 
 export const load: PageLoad<NewMonitorPageData> = async ({ params }) => {
 	const { teamID } = params;
-	const response = await getNotifications(teamID);
+	const [notificationsRes, regionsRes] = await Promise.all([
+		getNotifications(teamID),
+		getRegions()
+	]);
 
 	return {
-		notifications: response.data
+		notifications: notificationsRes.data,
+		regions: regionsRes.data
 	};
 };
